2005-08-08  David Hyatt  <hyatt@apple.com>

	Fix for radar bug #4202641, make sure line breaks happen inside
	white-space:pre if word-wrap:break-word is set.
	
        Reviewed by darin

        Test cases added: fast/text/whitespace/pre-break-word.html

        * khtml/rendering/bidi.cpp:
        (khtml::RenderBlock::findNextLineBreak):

2005-08-08  Darin Adler  <darin@apple.com>

        Reviewed by John.

        - fixed http://bugzilla.opendarwin.org/show_bug.cgi?id=4298
          JS crash with DOM2 mouse event with incorrect view

        Test cases added:
        * layout-tests/fast/events/init-event-null-view-expected.txt: Added.
        * layout-tests/fast/events/init-event-null-view.html: Added.

        * khtml/xml/dom2_eventsimpl.cpp: (MouseRelatedEventImpl::computeLayerPos): Added nil check.

2005-08-08  David Hyatt  <hyatt@apple.com>

	This patch implements support for <input type=radio> in the engine and removes the NSView-based
	control.
	
	Reviewed by: John Sullivan
	
        * ForwardingHeaders/qradiobutton.h: Removed.
        * WebCore.xcodeproj/project.pbxproj:
        Removing the old QRadioButton from the project.
	
	* khtml/css/html4.css:
        Add the CSS rule to give radio buttons the correct appearance.
	
	* khtml/html/html_formimpl.cpp:
        (DOM::HTMLInputElementImpl::click):
        Now that radio button has no corresponding QWidget, move its click handling case down to match
	the other widget-less controls.
	
	(DOM::HTMLInputElementImpl::createRenderer):
	The special renderer doesn't have to be made any more.  Radio now behaves like checkbox and just
	makes a renderer based off the specified display type in CSS.
	
        (DOM::HTMLInputElementImpl::setChecked):
        Fix a regression that prevented unnamed checkboxes from functioning properly.  Make sure to
	only disallow the selecting of unnamed radio buttons.
	
	(DOM::HTMLInputElementImpl::valueWithDefault):
	Fix some mis-indented ifdefs.
	